# ai-agent-rust-backend

./: Cargo.toml  README.md
src/: excepions.rs  lib.rs  main.rs  schemas.rs  util.rs
src/alchemy/: client.rs  langchain.rs  mod.rs  models.rs
src/api/: agave.rs  auth.rs  chats.rs  general.rs  mod.rs  statistics.rs
src/contracts/: solana.rs
src/core/: config.rs  db.rs  errors.rs  mod.rs  modules_factory.rs  redis.rs
src/core/models/: agent_balance.rs  base.rs  chat.rs  credit.rs  mod.rs  trade.rs  user.rs
src/llm/: actions.rs  llm_service.rs  mod.rs  prompts.rs  schemas.rs  utils.rs
src/models/: agent_balance.rs  base.rs  chat.rs  credit.rs  db_helper.rs  mod.rs  trade.rs  user.rs
src/price_forecasting/: mod.rs  models.rs  service.rs
src/price_forecasting/prompts/: price_forecasting_system_prompt.md  price_forecasting_user_prompt.md
src/strategy_analysis/: mod.rs  models.rs  service.rs  strategy.rs
src/utils/: binance.rs  dexscreener.rs  error.rs  general.rs  mod.rs  paginated_response.rs  raydium.rs  redis.rs  smc_driver.rs  solana_driver.rs  telegram_bot.rs  twitter_driver.rs
