[package]
name = "llm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.9.1"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
solana-sdk = "2.2.1"
sqlx = "0.8.3"
tracing = "0.1.41"
redis = "0.29.1"
sea-orm = "1.1.7"
chrono = "0.4.40"
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"
thiserror = "1.0"  
uuid = { version = "1.3", features = ["v4"] } 
log = "0.4"  
env_logger = "0.10"  
ethers = { version = "2.0", features = ["rustls"] }  

base58 = "0.2"  
regex = "1.5"  
web3 = "0.19.0" 
 
teloxide = { version = "0.11", features = ["macros"] }
dotenv = "0.15"  
hex = "0.4"  
structopt = "0.3"  
json = "0.12"  