[package]
name = "llm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
solana-sdk = "2.2.1"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres"]}
tracing = "0.1.41"
redis = { version = "0.29.1", features = ["aio", "tokio-comp", "connection-manager"]}
sea-orm = {version = "1.1.7", features = ["macros", "runtime-tokio-rustls", "sqlx-mysql"]}
chrono = "0.4.40"
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"
thiserror = "1.0"  
uuid = { version = "1.3", features = ["v4"] } 
log = "0.4"  
env_logger = "0.10"  
ethers = { version = "2.0", features = ["rustls"] }  
openai-api-rs = "0.1.9"

base58 = "0.2"  
regex = "1.5"  
web3 = "0.19.0" 
 
teloxide = { version = "0.11", features = ["macros"] }
dotenv = "0.15"  
hex = "0.4"  
structopt = "0.3"  
json = "0.12"  
solana-client = "2.2.2"
actix-web = "4.10.2"
sqlx-core = "=0.8.3"
openai = "1.0.0"
egg-mode = "0.16.1"
once_cell = "1.21.1"
lazycell = "1.3.0"
lazy_static = "1.5.0"
strum_macros = "0.27.1"
strum = {version = "0.27.1", features = ["derive"]}
rig-core = "0.9.1"
schemars = "0.8.22"
pdf-extract = "0.8.2"
